--- a/ControleDeTarefas/app/src/main/AndroidManifest.xml
+++ b/ControleDeTarefas/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.androidmads.kotlinsqlite">
+    package="com.alisson">
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -10,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -20,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AddOrEditActivity"
+            android:name=".view.AddOrEditActivity"
             android:theme="@style/AppTheme" />
     </application>
 
