--- a/ControleDeTarefas/app/build.gradle
+++ b/ControleDeTarefas/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin:'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
     defaultConfig {
-        applicationId "com.androidmads.kotlinsqlite"
-        minSdkVersion 15
-        targetSdkVersion 25
+        applicationId "com.alisson"
+        minSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -22,9 +22,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:28.0.0*'
     compile 'com.android.support.constraint:constraint-layout:1.0.0'
-    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:design:28.0.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 repositories {
